ui fixes and nested namespace support for c++ new class dialog

--- a/parts/cppsupport/classgeneratorconfigbase.ui
+++ b/parts/cppsupport/classgeneratorconfigbase.ui
@@ -27,7 +27,7 @@
                 <cstring>groupBox7_2</cstring>
             </property>
             <property name="title">
-                <string>File Templates</string>
+                <string>Class Templates</string>
             </property>
             <grid>
                 <property name="name">
